src/test/resources/amyc/typer/passing/Logical.amy
object Logical
  true || false && !false
end Logical
