src/test/resources/amyc/typer/failing/SeqError1.amy
object SeqError
  1 + true; false
end SeqError
